err/flask-transmute.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/cattr'...
Listing './lib/python3.5/site-packages/cattrs-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_transmute'...
Listing './lib/python3.5/site-packages/flask_transmute/tests'...
Listing './lib/python3.5/site-packages/flask_transmute-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/jsonschema_extractor'...
Listing './lib/python3.5/site-packages/jsonschema_extractor/tests'...
Listing './lib/python3.5/site-packages/jsonschema_extractor-0.6.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/schematics'...
Listing './lib/python3.5/site-packages/schematics/contrib'...
Listing './lib/python3.5/site-packages/schematics/types'...
Listing './lib/python3.5/site-packages/schematics-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/swagger_schema'...
Listing './lib/python3.5/site-packages/swagger_schema/tests'...
Listing './lib/python3.5/site-packages/swagger_schema-0.5.1.dist-info'...
Listing './lib/python3.5/site-packages/transmute_core'...
Listing './lib/python3.5/site-packages/transmute_core/attributes'...
Listing './lib/python3.5/site-packages/transmute_core/contenttype_serializers'...
Listing './lib/python3.5/site-packages/transmute_core/framework'...
Listing './lib/python3.5/site-packages/transmute_core/function'...
Listing './lib/python3.5/site-packages/transmute_core/http_parameters'...
Listing './lib/python3.5/site-packages/transmute_core/object_serializers'...
Listing './lib/python3.5/site-packages/transmute_core/object_serializers/cattrs_serializer'...
Listing './lib/python3.5/site-packages/transmute_core/swagger'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/css'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/fonts'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/images'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/lang'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/lib'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/lang'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/lib'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/src'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/src/main'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/src/main/html'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/src/main/javascript'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/src/main/less'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/src/main/template'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/test'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/test/e2e'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/test/e2e/v2'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/test/specs'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/test/specs/v1.2'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/test/specs/v2'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/test/unit'...
Listing './lib/python3.5/site-packages/transmute_core/swagger/static/swagger-ui-2.2.8/test/unit/view'...
Listing './lib/python3.5/site-packages/transmute_core/tests'...
Listing './lib/python3.5/site-packages/transmute_core/tests/contenttype_serializers'...
Listing './lib/python3.5/site-packages/transmute_core/tests/function'...
Listing './lib/python3.5/site-packages/transmute_core/tests/http_parameters'...
Listing './lib/python3.5/site-packages/transmute_core/tests/object_serializers'...
Listing './lib/python3.5/site-packages/transmute_core/tests/swagger'...
Listing './lib/python3.5/site-packages/transmute_core-1.7.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
